--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 :root {
   /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
@@ -24,9 +27,24 @@ body {
   margin: 0;
 }
 
-main {
-  flex-grow: 1;
+ul {
+  margin: 0;
+  padding-left: 0;
 }
-main:has(.back-link) {
-  text-align: center;
+li {
+  list-style-type: none;
 }
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+/* input {
+  outline: none;
+}
+.nav {
+  margin-left: 20px;
+  margin-top: 20px;
+} */
